# 96m4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_vectors.py  process_vectors.py
examples/: CMakeLists.txt  dodge_demo.cpp  example_0.cpp  example_1.cpp  hello.cpp  image_demo.cpp  image_demo_small.cpp  math_demo.cpp  pong_demo.cpp  pong_demo_1.cpp  pong_demo_small.cpp  utils.hpp
examples/games/: dodge.hpp  pong.hpp
examples/perceptron/: CMakeLists.txt  perceptron.cpp
examples/results/math/identity/: cube_6_epochs.txt  log_18_epochs.txt  sin_22_epochs.txt
examples/results/math/relu/: log_27_epochs.txt  sin_9_epochs.txt  sube_27_epochs.txt
examples/results/math/sigmoid/: cube_59_epochs.txt  log_11_epochs.txt  sin_70_epochs.txt
src/: 96m4.h  CMakeLists.txt  kernel.cpp  kernel.h  kernel.hpp  kernel_layer.cpp  kernel_layer.h  layer.cpp  layer.h  layer.hpp  model.cpp  model.h  model.hpp  parallel_executor.h  scalar.hpp  training.cpp  training.h  utils.cpp  utils.h  utils.hpp
